modificacion ultra masiva, falta conectar a api

--- a/Bienal/www/css/style.css
+++ b/Bienal/www/css/style.css
@@ -80,3 +80,11 @@ div.hscroller {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); 
 }
+
+span {
+    font-weight: 700;
+}
+
+p, html {
+    font-family: 'Libre Franklin', sans-serif;
+}
