--- a/Bienal/www/templates/audioVisuales.html
+++ b/Bienal/www/templates/audioVisuales.html
@@ -1,21 +1,29 @@
 <ion-view title="Audio/Visuales" id="page3" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="audioVisualesCtrl" style="background-color: #ED7635;">
         <div>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
+            <img style="height: 381px; width: 100%;" ng-src="img/bannerav.png">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualessabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualeslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesmartes6.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesmiercoles7.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesjueves8.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesviernes9.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
        </div>
          <div>
-           <img ng-src="img/audiovisuales.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
-           <p align="justify">En el área se podrán presentar no sólo los géneros más habituales como ficción, documental, 
-               animación, experimental, etc., sino también todas aquellas producciones que son creadas a través de los 
-               distintos códigos de la expresión audiovisual y de su transversalidad como instalaciones multimediales, VJ, 
-               video clip, motion graphics, video minuto, videojuego, stop motion, etc.</p>
+          <p>
+            La convocatoria apunta a la búsqueda de nuevos paradigmas en el campo audiovisual. Apela a que las elecciones estéticas recurran y den cuenta de los más diversos abordajes del discurso audiovisual contemporáneo; en idéntico sentido, se observará que muestren variedad de recursos técnicos y contenidos diversos, apuntando a la presentación de producciones artísticas acordes a las nuevas tendencias y códigos del campo audiovisual. Los contenidos, técnicas y temáticas serán libres y se tendrá especialmente en cuenta el trabajo en su carácter integral.<br>
+            En el área se podrán presentar no sólo los géneros más habituales como acción, documental, animación, experimental, etc., sino también todas aquellas producciones que son creadas a través de los distintos códigos de la expresión audiovisual y de su transversalidad como instalaciones
+            multimediales, VJ, video clip, motion graphics, video minuto, videojuego, stop motion, etc.<br>
+            <br>
+            Se seleccionaron 19 trabajos 5 de la categoria A y 14 de la categoria B.<br>
+            <br>
+            <span>Jurados:</span><br>
+            Agostina Almirón, Nadia Curzon, Brian De Simone, Gastón Martín, Aldana Mestre, Claudia Ruiz</br>
+            <br>
+            <span>Coordinación:</span> Paula Rodríguez<br>
+            <span>Asistencia:</span> Joaquín Maciel<br>
+        </p>
        </div> 
         </ion-content>
 </ion-view>
