--- a/Bienal/www/templates/letras.html
+++ b/Bienal/www/templates/letras.html
@@ -1,17 +1,24 @@
 <ion-view title="Letras" id="page4" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="letrasCtrl" style="background-color: #00A880;">
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
-           <img ng-src="img/LETRAS.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
-           <p align="justify">Se busca que los trabajos presentados puedan dar cuenta de los diversos géneros y soportes
-               en los que el discurso se manifiesta en la actualidad. En consonancia con lo anterior, se recibirán producciones
-               escritas que no necesariamente pertenezcan a los géneros más tradicionales, sino que se convoca a la presentación
-               de diversos tipos de textos.</p>
+         <img style="height: 381px; width: 100%;" ng-src="img/bannerletras.png">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrassabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrasdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letraslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrasmartes6.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrasmiercoles7.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrasjueves8.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/letrasviernes9.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
+           <p>
+                La convocatoria está dirigida a jóvenes que intervengan en el campo de las letras y la escritura. Se busca que los trabajos presentados puedan dar cuenta de los diversos géneros y soportes en los que el discurso se maniesta en la actualidad. En consonancia con lo anterior, se recibirán producciones escritas que no necesariamente pertenezcan a los géneros más tradicionales, sino que
+                se convoca a la presentación de diversos tipos de textos (relatos, ensayos, crónicas, poesías, canciones, historietas, etc.) La elección de técnicas y contenidos para la presentación de los trabajos escritos serán de absoluta libertad de los autores.<br>
+                <br>
+                Se duplicó el número de obras seleccionadas. Todos los trabajos (9) fueron selecciondos para ser expuestos.<br>
+                <br>
+                <span>Jurados:</span><br>
+                Daniela Fumis, Analía Giordanino, Melina Gustcher, Daniela Molinero, Jimena Morais, Lucas Mercado, Cecilia Moscovich, Gabriela Sierra, Celeste Treghnani<br>
+                <br>
+                <span>Coordinación:</span> Santiago Venturini<br>
+                <span>Asistencia:</span> Elisabeth Navarrete<br>
+            </p>
         </ion-content>
 </ion-view>
