--- a/Bienal/www/templates/menu.html
+++ b/Bienal/www/templates/menu.html
@@ -20,6 +20,8 @@
                 <ion-item id="menu-list-item6" ui-sref="menu.escenicas" menu-close="" class="  ">Escenicas</ion-item>
                 <ion-item id="menu-list-item7" ui-sref="menu.youtube" menu-close="" class=" ">Transmision en vivo</ion-item>
                 <ion-item id="menu-list-item8" ui-sref="menu.votos" menu-close="" class=" ">Votar</ion-item>
+                <ion-item id="menu-list-item9" ui-sref="menu.creditos" menu-close="" class=" ">Créditos</ion-item>
+                <ion-item id="menu-list-item10" ui-sref="menu.staff" menu-close="" class=" ">Staff</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
