--- a/Bienal/www/templates/musica.html
+++ b/Bienal/www/templates/musica.html
@@ -1,22 +1,26 @@
 <ion-view title="Musica" id="page2" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="musicaCtrl" style="background-color: #F8B451;">
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
+        <img style="heigt: 381px; width: 100%;" ng-src="img/bannermusica.png" >
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicasabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicadomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicalunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicamartes6.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicamiercoles7.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicajueves8.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/musicaviernes9.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
         <div>
-           <p align="justify">La convocatoria apunta a que las propuestas recurran y den 
-               cuenta de los más diversos abordajes musicales. 
-               En la presente edición, y en virtud de contemplar una mayor 
-               amplitud del campo musical, no sólo se pueden presentar los 
-               géneros habituales, sino que también serán consideradas todas 
-               aquellas producciones creadas a partir de los diversos códigos  
-               y géneros de la expresión musical, de su fusión y su 
-               transversalidad.</p>
+           <p style="text-color=#FFFFFF;">
+                La convocatoria apunta a que las propuestas recurran y den cuenta de los más diversos abordajes musicales. En la presente edición, y en virtud de contemplar una mayor amplitud del campo musical, no sólo se pueden presentar los géneros habituales, sino que también serán consideradas  todas aquellas producciones creadas a partir de los diversos códigos y géneros de la expresión musical, de su fusión y su transversalidad.<br>
+                <br>
+                Sobre un total de 120 grupos inscriptos se programaron 62 grupos que a lo largo de de la Bienal se presentan día por día en los patios de Rectorado (Patio Este y Patio Oeste) y el Patio de la Reforma en la FCJS.<br>
+                <br>
+                <span>Jurados:</span><br>
+                Diego Arenales, Franco Bongioanni, Cristian Deicas, José Giuranacci, Nicolás Loza, Maximiliano Maglianese, María Carolina Maldonado, Eliana Medina, Pablo Savat<br>
+                <br>
+                <span>Coordinador:</span><br>
+                <span>Coordinación:</span> Florencia Russo, Ariel Theuler, Juan Curto<br> 
+                <span>Asistencia:</span> Matías Sebastián Tell<br>
+           </p>
        </div>
         </ion-content>
 </ion-view>
