--- a/Bienal/www/templates/transmision.html
+++ b/Bienal/www/templates/transmision.html
@@ -1,5 +1,9 @@
 <ion-view title="Transmision En Vivo" id="page2" class=" ">
-    <ion-content padding="true" class="has-header" ng-controller="musicaCtrl" style="background-color: #F8B451;">
+    <ion-content padding="true" class="has-header" ng-controller="musicaCtrl" style="background: url('img/fondo.png');">
+        <div>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/litus.png" />
+        </div>
+        <br>
         <div class="video-container">
             <iframe width="100%" height="60%" src="https://www.youtube.com/embed/dnzGUVNlqRw" frameborder="0" allowfullscreen></iframe>
         </div> 
