--- a/Bienal/www/templates/visuales.html
+++ b/Bienal/www/templates/visuales.html
@@ -1,26 +1,34 @@
 <ion-view title="Visuales" id="page5" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="visualesCtrl" style="background-color: #393E80;">
         <div>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
+             <img style="height: 381px; width: 100%;" ng-click="share()" ng-src="img/bannervisuales.png">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales1.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales2.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales3.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales4.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales5.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales6.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales7.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales8.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales9.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales10.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales11.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales12.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales13.png" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/visuales14.png" class="image-list"/><br>
 	    </div>
        <div>
-           <img ng-src="img/VISUALES.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
-           <p align="justify">La convocatoria se dirige especialmente a los jóvenes
-                                que experimentan en el amplio campo del lenguaje visual.
-                                Se apela a que las producciones den cuenta de los más
-                                diversos abordajes del discurso contemporáneo, como así
-                                también revelen amplitud de planteos técnicos y de
-                                contenido, en orden a mostrar una producción artística
-                                acorde a las nuevas tendencias y códigos visuales. En el
-                                campo de expresiones visuales los soportes, contenidos,
-                                técnicas y temáticas son libres.</p>
+           <p>
+                La convocatoria se dirige especialmente a los jóvenes que experimentan en el amplio campo del lenguaje visual. Se apela a que las producciones den cuenta de los más diversos abordajes del discurso contemporáneo, como así también revelen amplitud de planteos técnicos y de contenido,  en orden a mostrar una producción artística acorde a las nuevas tendencias y códigos visuales. En el campo de expresiones visuales los soportes, contenidos, técnicas y temáticas son libres. Se pueden presentar no sólo las obras más habituales como dibujo, pintura, fotografía,       escultura, historieta, ilustración, instalaciones, arte digital, etc., sino también todas aquellas producciones que son creadas a través de los distintos códigos de la expresión visual y de su múltiple transversalidad actual.<br>
+                <br>
+                Los jóvenes de la categoría A (13 a 18 años) son la sorpresa de esta Bienal. Duplicaron la cantidad de obras inscriptas con 49 trabajos y quedaron todos selecionados. En  la categoría B, hay seleccionados 84 obras entre esculturas, cuadros, fotos, dibujos.<br>
+                <br>
+                <span>Jurados:</span><br>
+                Evangelina Andreose, Matías Bonfiglio, Lisandro Estherren, Aimé Luna, Agustina Mai Favali, Nilda Marsili, Glenda Morahan, Nicolás Sara, Rafael Villalba<br>
+                <br>
+                <span>Coordinación:</span> Vanina Gutiérrez, Sebastián Mercau<br>
+                <span>Asistencia:</span> Guillermo Andrés Brikman<br>
+            </p>
        </div>
         </ion-content>
 </ion-view>
