--- a/Bienal/www/templates/votacion.html
+++ b/Bienal/www/templates/votacion.html
@@ -1,5 +1,6 @@
 <ion-view title="Votar" id="page8" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="votoCtrl" style="background-color: #F8B451;">
+        <img style="heigt: 381px; width: 100%;" 	ng-src="img/vot.png" />
         <FORM NAME="myform" ACTION="" METHOD="GET">
         <div class="list list-inset">
             <label class="item item-input">
