--- a/Bienal/www/templates/escenicas.html
+++ b/Bienal/www/templates/escenicas.html
@@ -1,22 +1,25 @@
 <ion-view title="Escenicas" id="page6" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="escenicasCtrl" style="background-color: #EA5A57;">
         <div>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(4)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
-            <img style="heigt: 381px; width: 100%;" ng-src="img/imagen-pantalla1.png" ng-click="createCalendarEvent(7)" class="image-list"/><br>
+            <img style="height: 381px; width: 100%;" ng-src="img/bannerescenicas.png">
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicassabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicasdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicaslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicasmartes6.png" ng-click="createCalendarEvent(3)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicasjueves8.png" ng-click="createCalendarEvent(5)" class="image-list"/><br>
+            <img style="heigt: 381px; width: 100%;" ng-src="img/escenicasviernes9.png" ng-click="createCalendarEvent(6)" class="image-list"/><br>
 	    </div>
         <div>
-           <img ng-src="img/escenicas.jpg" style="heigt: 100%; width: 50%; align: left; vertical-align: text-top; float: left;">
-           <p align="justify">La convocatoria se dirige a la búsqueda de nuevos paradigmas en el campo escénico. 
-               En este sentido, se considerará especialmente las propuestas que demuestran variedad de recursos técnicos 
-               así como también contenidos diversos, prestando mayor atención a la presentación de producciones acordes a las 
-               nuevas tendencias del campo. La temática y las características de la puesta en escena son libres y se tendrá 
-               especialmente en cuenta el trabajo en su carácter integral. </p>
+            <p>
+                La convocatoria se dirige a la búsqueda de nuevos paradigmas en el campo escénico. Se apela a que las elecciones estéticas den cuenta de los abordajes más diversos de la creación escénica contemporánea. En este sentido, se considerará especialmente las propuestas que demuestran variedad de recursos técnicos así como también contenidos diversos, prestando mayor atención a la presentación de producciones acordes a las nuevas tendencias del campo. La temática y las características de la puesta en escena son libres y se tendrá especialmente en cuenta el trabajo en su carácter integral. Se podrán presentar trabajos que pertenezcan a los géneros habituales del teatro y la danza, así como producciones innovadoras que fusionen y combinen otras vertientes de la expresión escénica en general.<br>
+                <br>
+                Se duplicó el número de obras seleccionadas. Todos los trabajos (9) fueron selecciondos para ser expuestos.<br>
+                <br>
+                <span>Jurados:</span><br>
+                Claudia Correa, Vanina Monasterolo, Marina Serruya.<br>
+                <br>
+                <span>Coordinación:</span> Analía Batistela, Marilyn García, Eugenia Albanese<br>
+            </p>
        </div>  
         </ion-content>
 </ion-view>
