cambios varios FALTA EL MALDITO SERVIDOR!

--- a/Bienal/www/templates/audioVisuales.html
+++ b/Bienal/www/templates/audioVisuales.html
@@ -1,7 +1,7 @@
 <ion-view title="Audio/Visuales" id="page3" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="audioVisualesCtrl" style="background-color: #ED7635;">
         <div>
-            <img style="height: 381px; width: 100%;" ng-src="img/bannerav.png">
+            <img style="width: 100%;" ng-src="img/bannerav.png">
             <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualessabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualesdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/audiovisualeslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
