--- a/Bienal/www/templates/escenicas.html
+++ b/Bienal/www/templates/escenicas.html
@@ -1,7 +1,7 @@
 <ion-view title="Escenicas" id="page6" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="escenicasCtrl" style="background-color: #EA5A57;">
         <div>
-            <img style="height: 381px; width: 100%;" ng-src="img/bannerescenicas.png">
+            <img style="width: 100%;" ng-src="img/bannerescenicas.png">
             <img style="heigt: 381px; width: 100%;" ng-src="img/escenicassabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/escenicasdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/escenicaslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
