--- a/Bienal/www/templates/inicio.html
+++ b/Bienal/www/templates/inicio.html
@@ -1,5 +1,5 @@
 <ion-view title="12° Bienal de Arte Joven" id="page1" class=" ">
-	<ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background: url('img/fondo.png');">
+	<ion-content padding="true" class="has-header" ng-controller="inicioCtrl" style="background: #FFFFFF;">
 		<img style="heigt: 381px; width: 100%;" ng-click="showBI()" ng-src="img/inicio.gif" />
 		<img style="heigt: 381px; width: 100%;" ng-click="share()"	ng-src="img/hashtag.png" />
 		<img style="heigt: 381px; width: 100%;" ng-click="vivo()"	ng-src="img/litus.png" />
