--- a/Bienal/www/templates/letras.html
+++ b/Bienal/www/templates/letras.html
@@ -1,6 +1,6 @@
 <ion-view title="Letras" id="page4" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="letrasCtrl" style="background-color: #00A880;">
-         <img style="height: 381px; width: 100%;" ng-src="img/bannerletras.png">
+         <img style="width: 100%;" ng-src="img/bannerletras.png">
             <img style="heigt: 381px; width: 100%;" ng-src="img/letrassabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/letrasdomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/letraslunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
