--- a/Bienal/www/templates/musica.html
+++ b/Bienal/www/templates/musica.html
@@ -1,6 +1,6 @@
 <ion-view title="Musica" id="page2" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="musicaCtrl" style="background-color: #F8B451;">
-        <img style="heigt: 381px; width: 100%;" ng-src="img/bannermusica.png" >
+        <img style="width: 100%;" ng-src="img/bannermusica.png" >
             <img style="heigt: 381px; width: 100%;" ng-src="img/musicasabado3.png" ng-click="createCalendarEvent(0)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/musicadomingo4.png" ng-click="createCalendarEvent(1)" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/musicalunes5.png" ng-click="createCalendarEvent(2)" class="image-list"/><br>
