--- a/Bienal/www/templates/visuales.html
+++ b/Bienal/www/templates/visuales.html
@@ -1,7 +1,7 @@
 <ion-view title="Visuales" id="page5" class=" ">
     <ion-content padding="true" class="has-header" ng-controller="visualesCtrl" style="background-color: #393E80;">
         <div>
-             <img style="height: 381px; width: 100%;" ng-click="share()" ng-src="img/bannervisuales.png">
+             <img style="width: 100%;" ng-click="share()" ng-src="img/bannervisuales.png">
             <img style="heigt: 381px; width: 100%;" ng-src="img/visuales1.png" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/visuales2.png" class="image-list"/><br>
             <img style="heigt: 381px; width: 100%;" ng-src="img/visuales3.png" class="image-list"/><br>
