--- a/Bienal/www/templates/inicio.html
+++ b/Bienal/www/templates/inicio.html
@@ -6,6 +6,6 @@
 		<img style="heigt: 381px; width: 100%;" ng-click="showVI()"	ng-src="img/virt.png" />
 		<img style="heigt: 381px; width: 100%;" ng-click="showCR()"	ng-src="img/cr.png" />
 		<img style="heigt: 381px; width: 100%;" ng-click="showPP()"	ng-src="img/ptepta.png" />
-		<img style="heigt: 381px; width: 100%;" ng-click="showVT()"	ng-src="img/vot.png" />
+		<img style="heigt: 381px; width: 100%;"	ng-src="img/vot.png" />
 	</ion-content>
 </ion-view>
