buenas noches y GRACIAS TOTALES!

--- a/Bienal/www/templates/vAgradece.html
+++ b/Bienal/www/templates/vAgradece.html
@@ -6,5 +6,9 @@
             <br>
             siga disfrutando de la 12° Bienal de Arte Joven<br>
         </p>
+                 <button class="btn waves-effect waves-light" ui-sref="menu.inicio">
+                    <i>Volver</i>
+                    <i class="ion-android-send left"></i>
+                </button>
     </ion-content>
 </ion-view>
